fix today label

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,7 @@
   "cancel": "Cancel",
   "add": "Add",
   "addRemoveCity": "Add / Remove City",
+  "today": "Today",
   "textSize": "Text size",
   "textSizeSubtitle": "Scale all app text to your preferred size",
 
