--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -14,6 +14,7 @@
   "cancel": "Cancelar",
   "add": "Agregar",
   "addRemoveCity": "Agregar / Eliminar ciudad",
+  "today": "Hoy",
   "textSize": "Tamaño de texto",
   "textSizeSubtitle": "Ajusta el tamaño del texto de la app para mayor legibilidad",
 
