localized weather strings and current location label

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -29,6 +29,7 @@
   "swipeToDelete": "Swipe right to delete",
   "delete": "Delete",
   "now": "Now",
+  "currentLocation": "Current Location",
   "openSettings": "Open Settings",
   "enableLocationSettingsHint": "Enable location access in system settings.",
   "cityRestorePartial": "Some saved cities could not be restored. Pull to refresh.",
@@ -46,6 +47,34 @@
   "locationPermissionPermanentlyDenied": "Location permission denied permanently. Enable it in system settings.",
   "locationTimeout": "Timed out while getting your location. Pull to refresh to try again.",
   "locationUnavailable": "Location unavailable right now. Pull to refresh to retry.",
-  "locationFallbackMessage": "{message} Showing {city}. Enable location and refresh."
+  "locationFallbackMessage": "{message} Showing {city}. Enable location and refresh.",
+  "weatherClear": "Clear",
+  "weatherMainlyClear": "Mainly clear",
+  "weatherPartlyCloudy": "Partly cloudy",
+  "weatherOvercast": "Overcast",
+  "weatherFog": "Fog",
+  "weatherRimeFog": "Depositing rime fog",
+  "weatherLightDrizzle": "Light drizzle",
+  "weatherModerateDrizzle": "Moderate drizzle",
+  "weatherDenseDrizzle": "Dense drizzle",
+  "weatherLightFreezingDrizzle": "Light freezing drizzle",
+  "weatherFreezingDrizzle": "Freezing drizzle",
+  "weatherSlightRain": "Slight rain",
+  "weatherModerateRain": "Moderate rain",
+  "weatherHeavyRain": "Heavy rain",
+  "weatherLightFreezingRain": "Light freezing rain",
+  "weatherFreezingRain": "Freezing rain",
+  "weatherSlightSnowFall": "Slight snow fall",
+  "weatherModerateSnowFall": "Moderate snow fall",
+  "weatherHeavySnowFall": "Heavy snow fall",
+  "weatherSnowGrains": "Snow grains",
+  "weatherSlightRainShowers": "Slight rain showers",
+  "weatherModerateRainShowers": "Moderate rain showers",
+  "weatherViolentRainShowers": "Violent rain showers",
+  "weatherSlightSnowShowers": "Slight snow showers",
+  "weatherHeavySnowShowers": "Heavy snow showers",
+  "weatherThunderstorm": "Thunderstorm",
+  "weatherThunderstormWithHail": "Thunderstorm with hail",
+  "weatherHeavyThunderstormWithHail": "Heavy thunderstorm with hail"
   
 }
