--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -29,6 +29,7 @@
   "swipeToDelete": "Desliza a la derecha para eliminar",
   "delete": "Eliminar",
   "now": "Ahora",
+  "currentLocation": "Ubicación actual",
   "openSettings": "Abrir configuración",
   "enableLocationSettingsHint": "Habilita el acceso a la ubicación en la configuración del sistema.",
   "cityRestorePartial": "Algunas ciudades guardadas no se pudieron restaurar. Desliza para actualizar.",
@@ -46,6 +47,34 @@
   "locationPermissionPermanentlyDenied": "Permiso de ubicación denegado permanentemente. Habilítalo en la configuración del sistema.",
   "locationTimeout": "Se agotó el tiempo al obtener tu ubicación. Desliza para actualizar e inténtalo de nuevo.",
   "locationUnavailable": "Ubicación no disponible en este momento. Desliza para reintentar.",
-  "locationFallbackMessage": "{message} Mostrando {city}. Habilita la ubicación y actualiza."
+  "locationFallbackMessage": "{message} Mostrando {city}. Habilita la ubicación y actualiza.",
+  "weatherClear": "Despejado",
+  "weatherMainlyClear": "Mayormente despejado",
+  "weatherPartlyCloudy": "Parcialmente nublado",
+  "weatherOvercast": "Nublado",
+  "weatherFog": "Niebla",
+  "weatherRimeFog": "Niebla con escarcha",
+  "weatherLightDrizzle": "Llovizna ligera",
+  "weatherModerateDrizzle": "Llovizna moderada",
+  "weatherDenseDrizzle": "Llovizna intensa",
+  "weatherLightFreezingDrizzle": "Llovizna helada ligera",
+  "weatherFreezingDrizzle": "Llovizna helada",
+  "weatherSlightRain": "Lluvia leve",
+  "weatherModerateRain": "Lluvia moderada",
+  "weatherHeavyRain": "Lluvia intensa",
+  "weatherLightFreezingRain": "Lluvia helada ligera",
+  "weatherFreezingRain": "Lluvia helada",
+  "weatherSlightSnowFall": "Nevada ligera",
+  "weatherModerateSnowFall": "Nevada moderada",
+  "weatherHeavySnowFall": "Nevada intensa",
+  "weatherSnowGrains": "Granos de nieve",
+  "weatherSlightRainShowers": "Chubascos ligeros",
+  "weatherModerateRainShowers": "Chubascos moderados",
+  "weatherViolentRainShowers": "Chubascos fuertes",
+  "weatherSlightSnowShowers": "Chubascos de nieve ligeros",
+  "weatherHeavySnowShowers": "Chubascos de nieve intensos",
+  "weatherThunderstorm": "Tormenta eléctrica",
+  "weatherThunderstormWithHail": "Tormenta eléctrica con granizo",
+  "weatherHeavyThunderstormWithHail": "Tormenta eléctrica fuerte con granizo"
 
 }
